Add some tests, corrected project structture